fix footer alignment

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,6 +29,9 @@ $white: #fff;
 @mixin z5 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, .3), 0 15px 12px rgba(0, 0, 0, .22); // sass-lint:disable-line no-color-literals
 }
+@mixin z4-reverse {
+  box-shadow: 0 -14px 28px rgba(0, 0, 0, .25), 0 -10px 10px rgba(0, 0, 0, .22); // sass-lint:disable-line no-color-literals
+}
 
 // Box shadow classes
 .z1 {
@@ -49,6 +52,10 @@ $white: #fff;
 
 .z5 {
   @include z5;
+}
+
+.z4-reverse {
+  @include z4-reverse;
 }
 
 // Color classes
@@ -95,10 +102,12 @@ body {
   display         : flex;
   flex-direction  : column;
   font-family     : 'Istok Web', sans-serif;
+  // padding-bottom   : 60px;
 }
 
 .tab-content {
   flex: 1;
+  padding-bottom: 60px;
 }
 
 .nav,
